<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_3dp"
    android:layout_marginTop="@dimen/margin_3dp"
    android:layout_marginEnd="@dimen/margin_3dp"
    android:background="@color/blue">

    <TextView
        android:id="@+id/item_weather_per_hours_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_time"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_weather_per_hours_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_wind_speed"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_condition" />

    <TextView
        android:id="@+id/item_weather_per_hours_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_wind_direction"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_condition" />

    <TextView
        android:id="@+id/item_weather_per_hours_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_humidity"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_time" />

    <TextView
        android:id="@+id/item_weather_per_hours_chance_of_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_chance_of_rain"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_wind_speed" />

    <TextView
        android:id="@+id/item_weather_per_hours_chance_of_snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_chance_of_snow"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_not_important"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_wind_speed" />

    <TextView
        android:id="@+id/item_weather_per_hours_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_weather_per_hours_temperature"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintBottom_toBottomOf="@id/item_weather_per_hours_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_weather_per_hours_time" />

    <TextView
        android:id="@+id/item_weather_per_hours_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="1"
        android:paddingStart="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_8dp"
        android:text="@string/item_weather_per_hours_condition"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_important"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_weather_per_hours_humidity" />

    <ImageView
        android:id="@+id/item_weather_per_hours_condition_image"
        android:layout_width="@dimen/image_item_main_size"
        android:layout_height="@dimen/image_item_main_size"
        android:layout_marginTop="@dimen/margin_3dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:contentDescription="@string/item_weather_per_hours_condition_image"
        android:src="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="@id/item_weather_per_hours_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_weather_per_hours_time" />
</androidx.constraintlayout.widget.ConstraintLayout>